New Reception for new orders
mangerreception is connected with adapter
Superviser uploading images is optimized and etc

--- a/app/src/main/res/layout/activity_manager_reception.xml
+++ b/app/src/main/res/layout/activity_manager_reception.xml
@@ -85,7 +85,8 @@
                 android:id="@+id/rl_zakazchik"
                 android:layout_width="match_parent"
                 android:layout_height="72dp"
-                android:layout_marginStart="8dp">
+                android:layout_marginStart="8dp"
+                android:visibility="visible">
 
                 <TextView
                     android:id="@+id/tv_2"
@@ -94,18 +95,18 @@
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:text="Заказчик: "
-                    android:textSize="18sp"
-                    android:textColor="@color/colorPrimary"/>
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_z_zakazchik"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/tv_2"
                     android:layout_alignParentEnd="true"
+                    android:layout_toEndOf="@+id/tv_2"
                     android:text="//заказчик"
-                    android:textSize="18sp"
-                    android:textColor="@color/colorPrimary"/>
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_3"
@@ -114,19 +115,19 @@
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/tv_2"
                     android:text="Почта: "
-                    android:textSize="18sp"
-                    android:textColor="@color/colorPrimary"/>
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_z_pochta"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/tv_3"
-                    android:layout_below="@+id/tv_z_zakazchik"
                     android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/tv_z_zakazchik"
+                    android:layout_toEndOf="@+id/tv_3"
                     android:text="//почта"
-                    android:textSize="18sp"
-                    android:textColor="@color/colorPrimary"/>
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:id="@+id/tv_4"
@@ -135,21 +136,20 @@
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/tv_3"
                     android:text="Договор №: "
-                    android:textSize="18sp"
                     android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"/>
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tv_z_dogovor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toEndOf="@+id/tv_4"
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/tv_z_pochta"
+                    android:layout_toEndOf="@+id/tv_4"
                     android:text="//договор"
-                    android:textSize="18sp"
                     android:textColor="@color/colorPrimary"
-                    />
+                    android:textSize="18sp" />
 
             </RelativeLayout>
 
@@ -314,42 +314,41 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
+                android:layout_marginEnd="8dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp">
+                android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_marginBottom="8dp">
+                    android:layout_marginBottom="8dp"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/tv_10"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Дата  "
                         android:layout_marginStart="8dp"
-                        android:textSize="18sp"
-                        android:textColor="@color/colorPrimary"/>
+                        android:text="Дата  "
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="18sp" />
 
                     <TextView
                         android:id="@+id/tv_date_edit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="//date"
-                        android:textSize="18sp"
                         android:textColor="@color/colorPrimary"
-                        />
+                        android:textSize="18sp" />
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
                     android:orientation="horizontal"
-                    android:weightSum="100"
-                    android:layout_marginBottom="8dp">
+                    android:weightSum="100">
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -361,28 +360,28 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text=" "
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Количество:"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Вес:"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="Объём:"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                     </LinearLayout>
 
@@ -398,30 +397,29 @@
                             android:layout_height="wrap_content"
                             android:text="план:"
                             android:textColor="@color/colorPrimary"
-                            android:textStyle="bold"
                             android:textSize="18sp"
-                            />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                     </LinearLayout>
 
@@ -436,29 +434,29 @@
                             android:layout_height="wrap_content"
                             android:text="факт:"
                             android:textColor="@color/colorPrimary"
-                            android:textStyle="bold"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
-                            android:textSize="18sp"/>
+                            android:textSize="18sp" />
 
                     </LinearLayout>
 
@@ -467,46 +465,44 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
                     android:orientation="horizontal"
-                    android:weightSum="100"
-                    android:layout_marginBottom="8dp">
-                    
+                    android:weightSum="100">
+
                     <Spinner
                         android:id="@+id/spinner_otkuda"
                         android:layout_width="0dp"
                         android:layout_height="32dp"
                         android:layout_weight="40"
-                        android:elevation="10dp">
-                    </Spinner>
+                        android:elevation="10dp"></Spinner>
 
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:src="@drawable/ic_gruzovik_blue_24dp"
-                        android:layout_weight="20"/>
+                        android:layout_weight="20"
+                        android:src="@drawable/ic_gruzovik_blue_24dp" />
 
                     <Spinner
                         android:id="@+id/spinner_kuda"
                         android:layout_width="0dp"
                         android:layout_height="32dp"
                         android:layout_weight="40"
-                        android:elevation="10dp">
-                    </Spinner>
+                        android:elevation="10dp"></Spinner>
 
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp">
+                    android:orientation="vertical">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="8dp">
+                        android:layout_marginBottom="8dp"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -532,8 +528,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="8dp">
+                        android:layout_marginBottom="8dp"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -559,8 +555,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="8dp">
+                        android:layout_marginBottom="8dp"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -586,8 +582,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="8dp">
+                        android:layout_marginBottom="8dp"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -613,8 +609,8 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_marginBottom="8dp">
+                        android:layout_marginBottom="8dp"
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -644,19 +640,18 @@
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:hint="Документы"
-                    android:textColorHint="@color/colorPrimary"
-                    android:textSize="18sp"
                     android:textAlignment="textStart"
-                    />
+                    android:textColorHint="@color/colorPrimary"
+                    android:textSize="18sp" />
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Комментарий"
-                    android:textSize="18sp"
+                    android:textAlignment="center"
                     android:textColor="@color/colorPrimary"
-                    android:textStyle="bold"
-                    android:textAlignment="center"/>
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/et_kommentar"
