привязка готова, EditRMActivity, NewRMActivity are changed, передача данных с RecpManAc на EditRMactiv готова

--- a/app/src/main/res/layout/activity_manager_edreception.xml
+++ b/app/src/main/res/layout/activity_manager_edreception.xml
@@ -12,9 +12,6 @@
         android:layout_width="match_parent"
         android:layout_height="40dp">
 
-
-
-
         <ImageView
             android:id="@+id/iv_status"
             android:layout_width="32dp"
@@ -87,7 +84,7 @@
             <RelativeLayout
                 android:id="@+id/rl_zakazchik"
                 android:layout_width="match_parent"
-                android:layout_height="72dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:visibility="visible">
 
@@ -95,16 +92,17 @@
                     android:id="@+id/tv_2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:text="Заказчик: "
                     android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
 
-                <MultiAutoCompleteTextView
-                    android:id="@+id/tv_z_zakazchik"
+                <EditText
+                    android:id="@+id/et_z_zakazchik"
                     android:layout_width="wrap_content"
-                    android:layout_height="26dp"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_toEndOf="@+id/tv_2"
                     android:text="//заказчик"
@@ -115,18 +113,19 @@
                     android:id="@+id/tv_3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/tv_2"
                     android:text="Почта: "
                     android:textColor="@color/colorPrimary"
                     android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/tv_z_pochta"
+                <EditText
+                    android:id="@+id/et_z_pochta"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/tv_z_zakazchik"
+                    android:layout_below="@+id/et_z_zakazchik"
                     android:layout_toEndOf="@+id/tv_3"
                     android:text="//почта"
                     android:textColor="@color/colorPrimary"
@@ -136,6 +135,7 @@
                     android:id="@+id/tv_4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/tv_3"
                     android:text="Договор №: "
@@ -143,12 +143,12 @@
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/tv_z_dogovor"
+                <EditText
+                    android:id="@+id/et_z_dogovor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/tv_z_pochta"
+                    android:layout_below="@+id/et_z_pochta"
                     android:layout_toEndOf="@+id/tv_4"
                     android:text="//договор"
                     android:textColor="@color/colorPrimary"
@@ -168,21 +168,22 @@
             <RelativeLayout
                 android:id="@+id/rl_otpravitel"
                 android:layout_width="match_parent"
-                android:layout_height="122dp"
+                android:layout_height="wrap_content"
                 android:layout_marginStart="8dp">
 
                 <TextView
                     android:id="@+id/tv_5"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="11dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:text="Отправитель: "
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
 
-                <TextView
-                    android:id="@+id/tv_z_otprav"
+                <EditText
+                    android:id="@+id/et_z_otprav"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_5"
@@ -195,18 +196,19 @@
                     android:id="@+id/tv_6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/tv_5"
                     android:text="Откуда: "
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
 
-                <TextView
-                    android:id="@+id/tv_z_otkuda"
+                <EditText
+                    android:id="@+id/et_z_otkuda"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_6"
-                    android:layout_below="@+id/tv_z_otprav"
+                    android:layout_below="@+id/et_z_otprav"
                     android:layout_alignParentEnd="true"
                     android:text="//откуда"
                     android:textSize="18sp"
@@ -216,19 +218,20 @@
                     android:id="@+id/tv_7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/tv_6"
                     android:text="Адрес: "
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
 
-                <TextView
-                    android:id="@+id/tv_z_adres"
+                <EditText
+                    android:id="@+id/et_z_adres"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_7"
                     android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/tv_z_otkuda"
+                    android:layout_below="@+id/et_z_otkuda"
                     android:text="//адрес"
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
@@ -237,19 +240,20 @@
                     android:id="@+id/tv_8"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="22dp"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/tv_7"
                     android:text="Контактное лицо: "
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
 
-                <TextView
-                    android:id="@+id/tv_z_kontakt"
+                <EditText
+                    android:id="@+id/et_z_kontakt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_8"
                     android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/tv_z_adres"
+                    android:layout_below="@+id/et_z_adres"
                     android:text="//контактное лицо"
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
@@ -258,19 +262,20 @@
                     android:id="@+id/tv_9"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
                     android:layout_alignParentStart="true"
                     android:layout_below="@+id/tv_8"
                     android:text="Телефон: "
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
 
-                <TextView
-                    android:id="@+id/tv_z_telefon"
+                <EditText
+                    android:id="@+id/et_z_telefon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_9"
                     android:layout_alignParentEnd="true"
-                    android:layout_below="@+id/tv_z_kontakt"
+                    android:layout_below="@+id/et_z_kontakt"
                     android:text="//телефон"
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
@@ -289,7 +294,7 @@
             <RelativeLayout
                 android:id="@+id/rl_poluchatel"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginStart="8dp">
 
@@ -297,14 +302,15 @@
                     android:id="@+id/tv_p_1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="11dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentTop="true"
                     android:text="Получатель: "
                     android:textSize="18sp"
                     android:textColor="@android:color/black"/>
 
-                <TextView
-                    android:id="@+id/tv_p_poluch"
+                <EditText
+                    android:id="@+id/et_p_poluch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_toEndOf="@+id/tv_p_1"
@@ -336,8 +342,8 @@
                         android:textColor="@color/colorPrimary"
                         android:textSize="18sp" />
 
-                    <TextView
-                        android:id="@+id/tv_date_edit"
+                    <EditText
+                        android:id="@+id/et_date_edit"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="//date"
@@ -368,6 +374,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="12dp"
                             android:text="Количество:"
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
@@ -375,6 +382,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="19dp"
                             android:text="Вес:"
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
@@ -382,6 +390,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="21dp"
                             android:text="Объём:"
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
@@ -403,21 +412,24 @@
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
-                        <TextView
+                        <EditText
+                            android:id="@+id/et_p_kolich"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
 
-                        <TextView
+                        <EditText
+                            android:id="@+id/et_p_ves"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
 
-                        <TextView
+                        <EditText
+                            android:id="@+id/et_p_obiem"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
@@ -440,21 +452,24 @@
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
-                        <TextView
+                        <EditText
+                            android:id="@+id/et_f_kolich"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
 
-                        <TextView
+                        <EditText
+                            android:id="@+id/et_f_ves"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
 
-                        <TextView
+                        <EditText
+                            android:id="@+id/et_f_obiem"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
@@ -516,8 +531,8 @@
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
 
-                        <TextView
-                            android:id="@+id/tv_info"
+                        <EditText
+                            android:id="@+id/et_info"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
@@ -543,8 +558,8 @@
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
 
-                        <TextView
-                            android:id="@+id/tv_vid"
+                        <EditText
+                            android:id="@+id/et_vid"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
@@ -570,8 +585,8 @@
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
 
-                        <TextView
-                            android:id="@+id/tv_dostavka"
+                        <EditText
+                            android:id="@+id/et_dostavka"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
@@ -597,8 +612,8 @@
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
 
-                        <TextView
-                            android:id="@+id/tv_stoimost"
+                        <EditText
+                            android:id="@+id/et_stoimost"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
@@ -624,8 +639,8 @@
                             android:textColor="@color/colorPrimary"
                             android:textSize="18sp" />
 
-                        <TextView
-                            android:id="@+id/tv_status"
+                        <EditText
+                            android:id="@+id/et_status"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="100"
@@ -662,6 +677,31 @@
                     android:layout_height="44dp"
                     android:ems="10"
                     android:inputType="textMultiLine" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="8dp"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/btn_sohranit"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:hint="Сохранить"
+                        android:textAlignment="textStart"
+                        android:textColorHint="@color/colorPrimary"
+                        android:textSize="18sp" />
+
+                    <Button
+                        android:id="@+id/btn_otmenit"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:hint="Отменить"
+                        android:textAlignment="textStart"
+                        android:textColorHint="@color/colorPrimary"
+                        android:textSize="18sp" />
+                </LinearLayout>
 
             </LinearLayout>
 
