--- a/app/src/main/res/layout/activity_manager_reception.xml
+++ b/app/src/main/res/layout/activity_manager_reception.xml
@@ -286,8 +286,8 @@
             <RelativeLayout
                 android:id="@+id/rl_poluchatel"
                 android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:layout_marginBottom="8dp"
+                android:layout_height="26dp"
+                android:layout_marginBottom="5dp"
                 android:layout_marginStart="8dp">
 
                 <TextView
@@ -401,6 +401,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/tv_p_kolich"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
@@ -408,6 +409,7 @@
                             android:textSize="18sp" />
 
                         <TextView
+                            android:id="@+id/tv_p_ves"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
@@ -415,6 +417,7 @@
                             android:textSize="18sp" />
 
                         <TextView
+                            android:id="@+id/tv_p_obiem"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
@@ -438,6 +441,7 @@
                             android:textStyle="bold" />
 
                         <TextView
+                            android:id="@+id/tv_f_kolich"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
@@ -445,6 +449,7 @@
                             android:textSize="18sp" />
 
                         <TextView
+                            android:id="@+id/tv_f_ves"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
@@ -452,6 +457,7 @@
                             android:textSize="18sp" />
 
                         <TextView
+                            android:id="@+id/tv_f_obiem"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="//num"
@@ -659,6 +665,14 @@
                     android:layout_height="44dp"
                     android:ems="10"
                     android:inputType="textMultiLine" />
+
+                <Button
+                    android:id="@+id/btn_izmenit"
+                    android:layout_width="match_parent"
+                    android:layout_height="40dp"
+                    android:hint="Изменить"
+                    android:textSize="18sp"
+                    android:layout_marginBottom="10dp"/>
 
             </LinearLayout>
 
